# peglib

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  TODO.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  quality.yml
include/: peglib.h
include/peglib/: Combinators.h  Concepts.h  Context.h  DynExpr.h  FileReader.h  FileSource.h  Grammar.h  GrammarCompiler.h  InputSource.h  Macros.h  MetaGrammar.h  NonTerminal.h  ParseError.h  Parser.h  ParserFwd.h  PegAst.h  Recover.h  ResultType.h  Rule.h  SourceMap.h  Terminals.h
meta/: peg.peg
test/: .clang-tidy  CMakeLists.txt  alias_action_test.cpp  char32_smoke_test.cpp  context_test.cpp  doctest_main.cpp  dynexpr_test.cpp  error_test.cpp  file_source_test.cpp  file_test.cpp  from_string_test.cpp  grammar_test.cpp  json_skipper_test.cpp  json_test.cpp  lr_token_triangle_test.cpp  lr_triangle_repro_test.cpp  lua.cpp  lua_lex.cpp  lua_syntax  main.cpp  matcher_test.cpp  meta_grammar_test.cpp  negative_path_test.cpp  parse_tree_test.cpp  parser_test.cpp  peg_text_extensions_test.cpp  recover_test.cpp  recursive_leak_test.cpp  rule_test.cpp  self_parse_test.cpp  skipper_test.cpp  sourcemap_test.cpp  streaming_test.cpp  tidy_check.cpp  to_dot_test.cpp  token_char_test.cpp  typed_action_test.cpp  value_stack_test.cpp
test/perf/: BASELINE.md  bench.cpp  fixtures.hpp
